--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "html-webpack-plugin": "^4.0.0-beta.5",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.2.0"
   }
