--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "babel-loader": "^8.0.5",
     "html-webpack-plugin": "^4.0.0-beta.5",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.2.0"
