--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
     "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.0",
     "html-webpack-plugin": "^4.0.0-beta.5",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.2.0"
   }
