--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npx webpack --config webpack.config.prod.js --mode production",
+    "build": "npx webpack --config webpack.config.prod.js --mode=production",
     "watch": "npx webpack --watch",
     "start:dev": "webpack-dev-server"
   },
