Change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-babel-demo",
+  "name": "webpack-starter-kit",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
